tests/errors/test-enum-no-init.script

enum A{};
A a;

//>3:3: error C15: variables of enumeration type must be initialized
